--- a/server/file/index.html
+++ b/server/file/index.html
@@ -136,7 +136,7 @@
                         <h3 id="user">User2</h3>
                     </div>
                     <div class="all row">
-                        <img src="../_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
+                        <img id="capa" src="../_img/img-smp.jpg" class="exemplo img-thumbnail mt-2" alt="Img">
                     </div>
                     <div class="esp row">
                         <div class="col sm-6">
